# cpp-mesh-saliency

./: .gitignore  CMakeLists.txt  HC2I.npy  HC2I.txt  I2HC.npy  I2HC.txt  app.ipynb  app.py  cache_neighbors.cpp  cache_normals.cpp  cache_patches.cpp  cache_patches.py  decimate.cpp  extract.sh  find_face_neighbors.txt  main.cpp  preprocessing-steps.txt  save_face_neighbors_multithred.txt  show.cpp
cmake/: NumCpp.cmake  xtensor.cmake
codes/: decimate_mesh_and_saliency.txt  find_face_neighbors.txt  save_face_normals_and_area.txt  save_neighbors_per_face.txt
